--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "bcc_course_picker",
-  "version": "0.1",
+  "version": "0.0.1",
   "description": "BCC dollar course picker",
   "engines": {
-    "node": "5.9.1"
+    "node": "6.11.x",
+    "npm": "3.10.x"
   },
   "main": "index.js",
   "scripts": {
